--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "scripts": {
     "start": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "deploy": "next start",
+    "typecheck": "tsc --noEmit",
+    "export": "next build && next export",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@mantine/core": "^5.1.6",
+    "@mantine/form": "^5.1.6",
+    "@mantine/hooks": "^5.1.6",
+    "@mantine/notifications": "^5.1.6",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
